Upgrade support for Java 11